# sockpuppet

./: .travis.yml  CMakeLists.txt  README.md  socket.cpp  socket.h  socket_address.cpp  socket_address.h  socket_address_priv.cpp  socket_address_priv.h  socket_guard.cpp  socket_guard.h  sockpuppet_address_test.cpp  sockpuppet_tcp_server.cpp  sockpuppet_tcp_test.cpp  sockpuppet_test_client.cpp  sockpuppet_test_server.cpp  sockpuppet_udp_client.cpp  sockpuppet_udp_server.cpp  sockpuppet_udp_test.cpp
.github/workflows/: build_and_release.yml  build_and_test.yml
cmake/: sockpuppet-config.cmake.in  sockpuppet-config.cmake.static-tls.in
demo/: CMakeLists.txt  CMakeLists.txt.in
examples/: CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.shared.in  CMakeLists.txt.static.in  CMakeLists.txt.static.tls.in  README.md  sockpuppet_chat_client.cpp  sockpuppet_chat_io_print.h  sockpuppet_chat_server.cpp  sockpuppet_http_client.cpp  sockpuppet_http_server.cpp  sockpuppet_silent_song.cpp  sockpuppet_tcp_client.cpp  sockpuppet_tcp_server.cpp  sockpuppet_udp_client.cpp  sockpuppet_udp_server.cpp
include/: resource_pool.h  socket.h  socket_address.h  socket_async.h  socket_buffered.h  socket_guard.h
include/sockpuppet/: address.h  resource_pool.h  socket.h  socket_address.h  socket_async.h  socket_buffered.h
src/: address.cpp  address_impl.cpp  address_impl.h  address_impl_unix.cpp  address_impl_win.cpp  address_priv.cpp  address_priv.h  address_priv_unix.cpp  address_priv_win.cpp  driver_impl.cpp  driver_impl.h  driver_priv.cpp  driver_priv.h  error_code.cpp  error_code.h  error_code_tls.cpp  error_code_unix.cpp  error_code_win.cpp  socket.cpp  socket_address.cpp  socket_address_priv.cpp  socket_address_priv.h  socket_address_priv_unix.cpp  socket_address_priv_win.cpp  socket_async.cpp  socket_async_impl.cpp  socket_async_impl.h  socket_async_priv.cpp  socket_async_priv.h  socket_buffered.cpp  socket_buffered_impl.cpp  socket_buffered_impl.h  socket_buffered_priv.cpp  socket_buffered_priv.h  socket_driver_priv.cpp  socket_driver_priv.h  socket_guard.cpp  socket_guard.h  socket_guard_unix.cpp  socket_guard_win.cpp  (+22 more)
test/: CMakeLists.txt  sockpuppet_address_test.cpp  sockpuppet_broadcast_test.cpp  sockpuppet_internals_test.cpp  sockpuppet_scheduler_test.cpp  sockpuppet_tcp_async_performance_test.cpp  sockpuppet_tcp_async_test.cpp  sockpuppet_tcp_buffered_test.cpp  sockpuppet_tcp_test.cpp  sockpuppet_test_common.h  sockpuppet_todo_test.cpp  sockpuppet_udp_async_test.cpp  sockpuppet_udp_buffered_test.cpp  sockpuppet_udp_test.cpp  sockpuppet_util_test.cpp
