# link everything with the static/shared library
link_libraries(sockpuppet)

add_executable(sockpuppet_chat_client sockpuppet_chat_client.cpp sockpuppet_chat_io_print.h)
add_executable(sockpuppet_chat_server sockpuppet_chat_server.cpp)
add_executable(sockpuppet_http_client sockpuppet_http_client.cpp)
add_executable(sockpuppet_http_server sockpuppet_http_server.cpp)
add_executable(sockpuppet_silent_song sockpuppet_silent_song.cpp)
add_executable(sockpuppet_tcp_client sockpuppet_tcp_client.cpp)
add_executable(sockpuppet_tcp_server sockpuppet_tcp_server.cpp)
add_executable(sockpuppet_udp_client sockpuppet_udp_client.cpp)
add_executable(sockpuppet_udp_server sockpuppet_udp_server.cpp)

if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  target_link_libraries(sockpuppet_chat_client pthread)
endif()

install(TARGETS sockpuppet_chat_client DESTINATION bin)
install(TARGETS sockpuppet_chat_server DESTINATION bin)
install(TARGETS sockpuppet_http_client DESTINATION bin)
install(TARGETS sockpuppet_http_server DESTINATION bin)
install(TARGETS sockpuppet_silent_song DESTINATION bin)
install(TARGETS sockpuppet_tcp_client DESTINATION bin)
install(TARGETS sockpuppet_tcp_server DESTINATION bin)
install(TARGETS sockpuppet_udp_client DESTINATION bin)
install(TARGETS sockpuppet_udp_server DESTINATION bin)
